Publish publish-hard-cap branch
Source commit: 4f8fb9a6925a2911429d78678bd8a9ddb3714eb8
